RESOLVED FIXED152860
Can't play inline video in a stock WK1 WebView on Mac
https://bugs.webkit.org/show_bug.cgi?id=152860
Summary Can't play inline video in a stock WK1 WebView on Mac
Tim Horton
Reported 2016-01-07 14:26:32 PST
Can't play inline video in a stock WK1 WebView on Mac
Attachments
Patch (1.85 KB, patch)
2016-01-07 14:27 PST, Tim Horton
no flags
Tim Horton
Comment 1 2016-01-07 14:27:02 PST
Tim Horton
Comment 2 2016-01-07 15:12:42 PST
Note You need to log in before you can comment on or make changes to this bug.