Can't play inline video in a stock WK1 WebView on Mac https://bugs.webkit.org/show_bug.cgi?id=152860

Rubber-stamped by Jer Noble.

* WebView/WebPreferences.mm:
(+[WebPreferences initialize]):
The default for this preference is supposed to be NO on Mac. It is in
Settings.in, and in WebKit2, but this one place got it wrong.


Canonical link: https://commits.webkit.org/170945@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194727 268f45cc-cd09-0410-ab3c-d52691b4dbfc